[tool.poetry]
name = "demo-python-fastapi-background-task"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_fastapi_background_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
python-decouple = "^3.8"
python-multipart = "^0.0.6"
pyflakes = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
